gac_sb/objects/AppATimputation__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>CCMIPRectifie__c</fullName>
        <label>CCMIP Rectifié</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMITRectifie__c</fullName>
        <label>CCMIT Rectifié</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deces__c</fullName>
        <formula>DossierSalarie__r.Deces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Décès</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DossierSalarie__c</fullName>
        <label>Dossier Salarié</label>
        <referenceTo>AppATdossiersSalaries__c</referenceTo>
        <relationshipLabel>Imputations</relationshipLabel>
        <relationshipName>Imputations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dossier_Salaries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dossier Salarié</label>
        <referenceTo>AppATdossiersSalaries__c</referenceTo>
        <relationshipLabel>Imputations (Dossier Salarié)</relationshipLabel>
        <relationshipName>Imputations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImputationsContestees__c</fullName>
        <label>Imputations contestées</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>IT &amp; IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;DossierSalarie__r.Mission__c,  DossierSalarie__r.Mission__r.Name ,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taux_IPP__c</fullName>
        <label>Taux d&apos;IPP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccmIP__c</fullName>
        <label>CCM IP</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ImputationsContestees__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccmIT__c</fullName>
        <label>CCM IT</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ImputationsContestees__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Imputation</label>
    <nameField>
        <label>Année</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imputations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>